Input boxes available for data which isn't available.

--- a/src/scss/ReactTable.scss
+++ b/src/scss/ReactTable.scss
@@ -17,6 +17,9 @@
     tr.summary-selected {
       background-color: $even-darker-utility-color;
     }
+    tr.highlight-selected {
+      background-color: $highlight-color;
+    }
     tr:hover {
       background-color: $utility-color;
     }
