--- a/src/scss/Variables.scss
+++ b/src/scss/Variables.scss
@@ -5,6 +5,7 @@ $main-bg-color: #fff;
 $text-color: #4a5564;
 $contrast-text-color: #fff;
 $utility-color: #f0f3f5;
+$highlight-color: #bedff6;
 $darken-utility-color: darken($utility-color,5);
 $even-darker-utility-color: darken($utility-color,10);
 $table-font-family: Tahoma, Arial, sans-serif;
